<resources>
    <string name="app_name">万能安防box</string>
    <string name="title_data">实时数据</string>
    <string name="title_control">调控</string>
    <string name="title_notifications">Notifications</string>
    <string name="temp_value">温度值：</string>
    <string name="temp">%1$d °C</string>
    <string name="humidity_value">湿度值：</string>
    <string name="humidity">%1$d RH</string>
    <string name="temp_control">温度阈值控制:</string>

    <string name="temp_min">最小温度值</string>
    <string name="temp_max">最大温度值</string>
    <string name="confirm">确认</string>
    <string name="hum_min">最小湿度值</string>
    <string name="hum_max">最大湿度值</string>
    <string name="hum_control">湿度阈值控制:</string>
    <string name="update_time">更新时间</string>
    <string name="state_door">门状态：</string>
    <string name="open">开</string>
    <string name="close">关</string>
    <string name="camera">拍照</string>
    <string name="picture">捕获图片于</string>
    <string name="td_temp">当前温度阈值：</string>
    <string name="td_hy">当前湿度阈值：</string>
    <string name="fire_state">火情：</string>
    <string name="security">万能安防</string>
    <string name="welcome">欢迎进入设备云</string>
</resources>
