<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/temp_control" />

        <EditText
            android:id="@+id/temp_min"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/temp_min"
            android:inputType="number" />

        <EditText
            android:id="@+id/temp_max"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/temp_max"
            android:inputType="number" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5">

        <TextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/hum_control" />

        <EditText
            android:id="@+id/hum_min"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/hum_min"
            android:inputType="number" />

        <EditText
            android:id="@+id/hum_max"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:hint="@string/hum_max"
            android:inputType="number" />

    </LinearLayout>

    <Button
        android:id="@+id/confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />

    <Button
        android:id="@+id/camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm" />


</android.support.constraint.ConstraintLayout>